--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
             "email": "uraankhayayaal@gmail.com"
         }
     ],
+    "minimum-stability": "stable",
     "require": {
         "yiisoft/yii2": "*"
     },
